<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_access"
        android:id="@+id/no_internet_message"
        android:layout_gravity="center"
        android:textColor="#ffbababa"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:id="@+id/try_again_button"
        android:layout_gravity="center"
        android:padding="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_saved"
        android:id="@+id/show_saved_button"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginTop="100dp" />

</FrameLayout>