<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView2"
            android:src="@drawable/nuft_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Опис"
            android:id="@+id/description_header"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/description"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:gravity="center_horizontal"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Автор ідеї"
            android:id="@+id/idea_author_header"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idea_author"
            android:id="@+id/idea_author"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Розробник"
            android:id="@+id/developer_header"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:id="@+id/developer"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Тестувальники"
            android:id="@+id/testers_header"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testers"
            android:id="@+id/testers"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Версія"
            android:id="@+id/version_header"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:id="@+id/version"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>